--- a/Notes project/notes.html
+++ b/Notes project/notes.html
@@ -9,21 +9,31 @@
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="about.html">About Me</a></li>
+      <li><a href="contact.html">Contact</a></li>
       <li><a href="index.html">Logout</a></li>
     </ul>
   </nav>
 
   <div class="container">
     <aside>
-      <h2>Notes Topics</h2>
+      <p id="headding">Notes Topics</p>
+      <h1>Ch-1 Mobile Communications SS 2002</h1>
       <ul>
-        <li><a href="MOBILE/C01-Introduction.pdf" data-url="MOBILE/C01-Introduction.pdf">C01-Introduction</a></li>
-        <li><a href="MOBILE/gsm.pdf" data-url="MOBILE/gsm.pdf">Wireless Telecommunication Systems</a></li>
+        <li><a href="MOBILE/Introduction.pdf" data-url="MOBILE/Introduction.pdf">➼ Introduction</a></li>
+        <li><a href="MOBILE/overview.pdf" data-url="MOBILE/overview.pdf">➼ Overview</a></li>
+
+        <h1>Ch-2 Wireless Telecommunication Systems</h1>
+        <li><a href="MOBILE\Ch-2\introduction.pdf" data-url="MOBILE\Ch-2\introduction.pdf">➼ Introduction</a></li>
+        <li><a href="MOBILE\Ch-2\disadvantage.pdf" data-url="MOBILE\Ch-2\disadvantage.pdf">➼ Disadvantages of GSM
+        </a></li>
+        <h1>Ch-3 TDMA and FDMA</h1>
         <li><a href="MOBILE/notes TDMA and FDMA.pdf" data-url="MOBILE/notes TDMA and FDMA.pdf">TDMA and FDMA</a></li>
+       <h1>Mobile
+        Communications</h1>
         <li><a href="MOBILE/tutorial_Mobile-Communications-JochenSchiller.pdf" data-url="MOBILE/tutorial_Mobile-Communications-JochenSchiller.pdf">Mobile-Communications-JochenSchiller</a></li>
       </ul>
     </aside>
-    <iframe id="pdf-iframe" src=""></iframe>
+    <iframe id="pdf-iframe"></iframe>
   </div>
 
   <center>
