--- a/Notes project/about.html
+++ b/Notes project/about.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="notes.html">Home</a></li>
       <li><a href="about.html">About Me</a></li>
+      <li><a href="contact.html">Contact</a></li>
       <li><a href="index.html">Logout</a></li>
     </ul>
   </nav>
