--- a/Notes project/index.html
+++ b/Notes project/index.html
@@ -8,12 +8,12 @@
 <div class="login-container">
     <h1>Login</h1>
     <form id="login-form" onsubmit="validateForm(event)">
-      <input type="text" id="username" placeholder="Enter Username">
+      <input type="text" id="username" placeholder="Enter Username" autocomplete="off">
       <input type="password" id="password" placeholder="Enter Password">
       <p id="error-message"></p>
       <button type="submit">Login</button>
     </form>
-    
+    <p>Don't have an account? <a href="signup.html">Sign up</a></p>
   </div>
 
   <center>
