--- a/Notes project/about.html
+++ b/Notes project/about.html
@@ -2,41 +2,121 @@
 <html>
 <head>
   <title>About Me</title>
-  <link rel="stylesheet" type="text/css" href="about.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      margin: 0;
+      padding: 0;
+    }
+    nav {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      font-size: 25px;
+    }
+    nav ul {
+      margin: 0;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline;
+      margin-right: 15px;
+    }
+    nav ul li a {
+      color: #fff;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 10px;
+    }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+    .texts {
+      font-size: 16px;
+      line-height: 1.5;
+      margin-bottom: 20px;
+    }
+    #myName{
+      font-size: large;
+      color: crimson;
+      font-weight: bold;
+    }
+    .section-title {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .section-content {
+      margin-bottom: 20px;
+    }
+    .profile-photo {
+      display: block;
+      width: 200px;
+      height: 200px;
+      margin-bottom: 20px;
+      border-radius: 5%;
+    }
+    footer {
+      margin-top: 20px;
+    }
+    footer span {
+      font-size: 14px;
+    }
+    footer a {
+      color: #333;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <nav>
     <ul>
-      <li><a href="notes.html">Home</a></li>
+      <li><a href="#">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="index.html">Logout</a></li>
+      <li><a href="logout.html">Logout</a></li>
     </ul>
   </nav>
-
-  <section>
-    <h2>About Me</h2>
-    <div id="intro">
-      <img src="about.jpg" alt="Your Photo">
-      <p>Hello, my name is <span id="name"></span>. I am a <span id="occupation"></span> based in <span id="location"></span>.</p>
+  <div class="container">
+    <h1>About Me</h1>
+    <img src="https://scontent.fbom16-1.fna.fbcdn.net/v/t39.30808-6/327439076_587676253203604_7211092461582801771_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=GUPbnVYuNeoAX-OhkiG&_nc_ht=scontent.fbom16-1.fna&oh=00_AfB0WdzDxqZRS2Z4SupbBEoIqK2hPl5KBTOAANB0c-iV7w&oe=648A726D" alt="Profile Photo" class="profile-photo">
+    <div class="texts">
+      <h1>Hello!</h1> <p id ="myName"> My name is Abishek Khanal </p> I am a student at <b>Nar Bahadur Bhandari Government College </b> Tadong Sikkim. Currently, I am pursuing a B. Voc degree in Software Development and I am in my 2nd semester.
     </div>
-  </section>
-
-  <section>
-    <h2>Hobbies</h2>
-    <ul id="hobbies">
-        <div class="hobbie">
-      <p>Playing</p>
-      <p>Reading books</p>
-      <p>Traveling</p>
-    </div>
-    </ul>
-  </section>
-
-  <footer>
-    <span>Created By <a href="https://abishekkhanal.github.io/">Abishek Khanal</a> | &copy; 2023 All rights reserved.</span>
-  </footer>
-
-  <script src="about.js"></script>
-</body>
-</html>
+    <div class="section">
+      <h2 class="section-title">Education</h2>
+      <p class="section-content">
+        I am enrolled in the B. Voc program at Nar Bahadur Bhandari Government College Tadong Sikkim, specializing in Software Development. I am gaining practical knowledge and skills in various aspects of software development.
+      </p>
+      </div>
+      <div class="section">
+      <h2 class="section-title">Skills</h2>
+      <p class="section-content">
+      ➼ HTML5<br>
+      ➼ CSS3<br>
+      ➼ JavaScript<br>
+      ➼ C Programming<br>
+      ➼ Database Management<br>
+      </p>
+      </div>
+      <div class="section">
+      <h2 class="section-title">Contact</h2>
+      <p class="section-content">
+      Contact me through my website: <a href="https://abishekkhanal.github.io">abishekkhanal.github.io</a>.
+      </p>
+      </div>
+      
+        </div>
+        <center>
+          <footer>
+              <span>Created By <a href="https://abishekkhanal.github.io/">Abishek Khanal</a> | &copy; 2023 All rights reserved.</span>
+          </footer>
+        </center>
+      </body>
+      </html>
