--- a/Notes project/contact.html
+++ b/Notes project/contact.html
@@ -14,26 +14,22 @@
       margin-bottom: 20px;
     }
     nav {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
-    display: inline;
-    margin-right: 10px;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      font-size: 25px;
+    }
+    nav ul {
+      margin: 0;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline;
+      margin-right: 15px;
+    }
+    nav ul li a {
+      color: #fff;
+    }
     .container {
       max-width: 500px;
       margin: 0 auto;
@@ -74,14 +70,14 @@
   </style>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="notes.html">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="index.html">Logout</a></li>
-    </ul>
-  </nav>
+    <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="logout.html">Logout</a></li>
+        </ul>
+      </nav>
 
   <div class="container">
     <h1>Contact Us</h1>
