--- a/Notes project/notes.html
+++ b/Notes project/notes.html
@@ -10,7 +10,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="index.html">Logout</a></li>
+      <li><a href="logout.html">Logout</a></li>
     </ul>
   </nav>
 
