--- a/Notes project/about.html
+++ b/Notes project/about.html
@@ -75,14 +75,14 @@
   </style>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="logout.html">Logout</a></li>
-    </ul>
-  </nav>
+ <nav>
+        <ul>
+          <li><a href="notes.html">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="logout.html">Logout</a></li>
+        </ul>
+      </nav>
   <div class="container">
     <h1>About Me</h1>
     <img src="https://scontent.fbom16-1.fna.fbcdn.net/v/t39.30808-6/327439076_587676253203604_7211092461582801771_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=GUPbnVYuNeoAX-OhkiG&_nc_ht=scontent.fbom16-1.fna&oh=00_AfB0WdzDxqZRS2Z4SupbBEoIqK2hPl5KBTOAANB0c-iV7w&oe=648A726D" alt="Profile Photo" class="profile-photo">
