--- a/Notes project/notes.html
+++ b/Notes project/notes.html
@@ -19,7 +19,7 @@
       <p id="headding">Notes Topics</p>
       <h1>Ch-1 Mobile Communications SS 2002</h1>
       <ul>
-        <li><a href="MOBILE/Introduction.pdf" data-url="MOBILE/Introduction.pdf">➼ Introduction</a></li>
+        <li><a href="MOBILE/introduction.pdf" data-url="MOBILE/introduction.pdf">➼ Introduction</a></li>
         <li><a href="MOBILE/overview.pdf" data-url="MOBILE/overview.pdf">➼ Overview</a></li>
 
         <h1>Ch-2 Wireless Telecommunication Systems</h1>
